feat: Backend security and service enhancements
- Updated SecurityConfig for OAuth2 and JWT

- Enhanced ProductService and UserService

- Added custom OIDC user service and success handler

- Updated application properties and Docker configuration